--- a/sobreMim.html
+++ b/sobreMim.html
@@ -6,7 +6,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-        <a class="navbar-brand" href="#">Seu Nome</a>
+        <a class="navbar-brand" href="#">Gustavo Bana</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
